añadida la gestión de los medicos y espacialidades

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,9 +40,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/medico, roles: ROLE_MEDICO }
-        - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/medicos, roles: [ROLE_ADMIN, ROLE_ADMINISTRATIVO] }
 
 when@test:
     security:
